Closed
Bug 503811
Opened 16 years ago
Closed 16 years ago
crash [@ nsMsgDBView::MarkThreadOfMsgRead(unsigned int, unsigned int, nsTArray<unsigned int>&, int)] marking thread read
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.0b4
People
(Reporter: wsmwk, Assigned: rkent)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
558 bytes,
patch
|
standard8
:
review+
standard8
:
superreview+
|
Details | Diff | Splinter Review |
crash [@ nsMsgDBView::MarkThreadOfMsgRead(unsigned int, unsigned int, nsTArray<unsigned int>&, int)]
I hit this marking thread read in a virtual folder.
based on crash-stats is quite rare - a few per month.
goes back at least as far as 3.0b1
bp-32466d25-3d71-4ec9-902f-ff67b2090712
0 thunderbird.exe nsMsgDBView::MarkThreadOfMsgRead mailnews/base/src/nsMsgDBView.cpp:5815
1 thunderbird.exe nsMsgDBView::SetThreadOfMsgReadByIndex mailnews/base/src/nsMsgDBView.cpp:3019
2 thunderbird.exe nsMsgDBView::ApplyCommandToIndices mailnews/base/src/nsMsgDBView.cpp:2697
3 thunderbird.exe nsMsgSearchDBView::DoCommand mailnews/base/src/nsMsgSearchDBView.cpp:811
4 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:101
5 thunderbird.exe XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2454
6 nspr4.dll PR_Lock nsprpub/pr/src/threads/combined/prulock.c:233
7 js3250.dll js3250.dll@0xbff6f
There is perhaps another issue ... crash-stats for 3.1a1pre crashes does not show the source lines eg. bp-c764df28-ec69-46de-9d93-34e0a2090710
I see also lack of line # in bp-1c57ec5e-4374-4446-a43b-6dfb92090710 for a different crash. But I don't see this in all 3.1a1pre crashes
| Assignee | ||
Comment 1•16 years ago
|
||
I'm guessing this code:
5812 nsCOMPtr <nsIMsgDBHdr> firstHdr;
5813 threadHdr->GetChildAt(0, getter_AddRefs(firstHdr));
5814 nsMsgKey firstHdrId;
5815 firstHdr->GetMessageKey(&firstHdrId);
is returning null firstHdr, so checking that should prevent this. The call to GetChildAt returns errors if message is not found, but we are ignoring that here.
I'll do this simple patch if there is no controversy about that.
Assignee: nobody → kent
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•16 years ago
|
||
Attachment #392433 -
Flags: superreview?(bugzilla)
Attachment #392433 -
Flags: review?(bugzilla)
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs r/sr standard8]
Updated•16 years ago
|
Attachment #392433 -
Flags: superreview?(bugzilla)
Attachment #392433 -
Flags: superreview+
Attachment #392433 -
Flags: review?(bugzilla)
Attachment #392433 -
Flags: review+
Comment 3•16 years ago
|
||
Comment on attachment 392433 [details] [diff] [review]
Add check for null header
I guess this comes under the general heading of the fact that we occasionally get issues in threads. In any case, checking the result is definitely a good idea here.
r/sr=Standard8.
| Assignee | ||
Updated•16 years ago
|
Keywords: crash → checkin-needed
Whiteboard: [needs r/sr standard8] → [needs checkin]
Comment 4•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Target Milestone: --- → Thunderbird 3.0b4
| Reporter | ||
Comment 5•16 years ago
|
||
I think we can safely say this is gone.
not since 2009072300 build, i.e. almost 3 months, despite an average of 2 crashes/month in prior nightly builds.
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsMsgDBView::MarkThreadOfMsgRead(unsigned int, unsigned int, nsTArray<unsigned int>&, int)]
You need to log in
before you can comment on or make changes to this bug.
Description
•