Bug 503811 - "crash [@ nsMsgDBView::MarkThreadOfMsgRead(unsigned int, unsigned int, nsTArray<unsigned int>&, int)] marking thread read" [r+sr=Standard8]